[Shared + Merchants] Command Pattern!